--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "babel-plugin-twin": "^1.1.0",
     "tailwindcss": "^3.2.4",
     "typescript": "^4.9.3",
+    "usehooks-ts": "^2.9.1",
     "vite": "^4.0.0",
     "vite-tsconfig-paths": "^4.0.3"
   }
